# id-extractor

./: CMakeLists.txt  LICENSE.txt  README.md
include/command/: extractor.hpp
run/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  detector.cpp  detector.h  matcher.cpp  matcher.h
src/command/: extractor.cpp  extractor.h
test/: CMakeLists.txt
test/command/: extractor_test.cpp
